--- a/Assignment 1/Assignment 1.html
+++ b/Assignment 1/Assignment 1.html
@@ -13,13 +13,13 @@
 <rect style="fill:yellow; stroke:brown; stroke-width:2; fill-opacity:0.4; stroke-opacity:0.8" height="120" width="170" y="30" x="30"></rect>
 
 <!--Square-->
-<rect style="fill:red; stroke:brown; stroke-width:2; fill-opacity:0.4; stroke-opacity:0.8" height="100" width="100" y="90" x="70"></rect>
+<rect style="fill:red; stroke:brown; stroke-width:2; fill-opacity:0.4; stroke-opacity:0.8" height="100" width="100" y="100" x="100"></rect>
 
 <!--Point-->
 <circle stroke-width="2" stroke="black" r="2" cy="150" cx="200"></circle>
 
 <!--PolyLine-->
-<polyline style="fill:none; stroke:Red; stroke-width:3" points="30,30 40,25 60,40 80,120 120,140 200,150"></polyline>
+<polyline style="fill:none; stroke: #284bea; stroke-width:3" points="30,30 40,25 60,40 80,120 120,140 200,150"></polyline>
 
 </svg>
 </body>
